feat: add hetzner csi mount point

--- a/terraform/templates/workerpatch.yaml.tmpl
+++ b/terraform/templates/workerpatch.yaml.tmpl
@@ -9,6 +9,14 @@ machine:
       - rw
       source: /var/openebs/local
       type: bind
+    # Hetzner CSI mount
+    - destination: /run/csi
+      type: bind
+      source: /var/lib/kubelet/plugins/csi.hetzner.cloud
+      options:
+      - bind
+      - rshared
+      - rw
     extraArgs:
       node-labels: openebs.io/engine=mayastor
     nodeIP:
